Changed a couple spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 header {
   width: 900px;
   padding-top: 30px;
-  padding-bottom: 15px;
+  padding-bottom: 10px;
   border-image: url(../img/border-img.png) 0 0 12 0 round;
   border-bottom: 12px;
   margin-bottom: 20px;
@@ -34,8 +34,8 @@ input[type="checkbox"] {
 
 footer {
   text-align: center;
-  font-family: 'Slabo 27px', serif;
-  font-size: .95em;
+  font-family: 'Droid Serif', serif;
+  font-size: .9em;
   letter-spacing: -0.2px;
 }
 
@@ -95,7 +95,10 @@ header p {
 
 .recipe-title {
   font-family: "Oswald";
-  font-weight: lighter;
+  font-weight: bold;
+  font-size: 2.5em;
+  position: relative;
+  top: 10px;
 }
 
 .post-date, .print-block p {
@@ -103,11 +106,12 @@ header p {
   text-transform: uppercase;
   font-size: 0.8em;
   color: gray;
+  position: relative;
 }
 
 .post-date {
   position: relative;
-  bottom: 25px;
+  bottom: 20px;
   color: #a8b2bb;
 }
 
@@ -115,7 +119,7 @@ header p {
   width: auto;
   float: right;
   position: relative;
-  bottom: 67px;
+  bottom: 65px;
 }
 
 .print-block p {
@@ -196,6 +200,7 @@ header p {
 
 .author h1 {
   bottom: 10px;
+  font-size: 1.2em;
 }
 
 .author h2 {
@@ -212,7 +217,7 @@ header p {
   background-color: #bc7058;
   bottom: 62px;
   color: #feffff;
-  text-transform: none;
+  font-weight: normal;
 }
 
 .author img {
